solved on hover text spacing

--- a/src/App.css
+++ b/src/App.css
@@ -20,27 +20,28 @@
 
   margin-top: -3vh;
   border: solid blue; 
-  width: 100%; 
-  height: 30%;  
+  /* width: 100%;  */
+  height: 34%;  
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
 }
 .cardContainer{
-  max-height: 100px;
+
   border: solid purple; 
   margin: auto;
   margin-top: -0px;
   display: block;
   align-items: center;
   z-index: 10;
-  background-color: black;
+  /* background-color: black; */
 }
 .innerCardContainer{
-  /* max-height: 100px;    */
+
 }
 #spades,#hearts{
+  
   transform: rotate(90deg);
   width: 12vw; 
 }
@@ -78,7 +79,7 @@
 }
 .heading{
   top: -5vh;
-  margin-top: -2vh;
+  margin-top: -2.5vh;
   font-size: 2.5vh;
   z-index: 5;
 }
